Some findbugs cleanup